; ModuleID = '/home/carl/AnghaBench/bitwise/ion/extr_common.c_arena_free.c'
source_filename = "/home/carl/AnghaBench/bitwise/ion/extr_common.c_arena_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i8** }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @arena_free(%struct.TYPE_3__* %0) #0 {
  %2 = alloca %struct.TYPE_3__*, align 8
  %3 = alloca i8**, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %2, align 8
  %4 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %5 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %4, i32 0, i32 0
  %6 = load i8**, i8*** %5, align 8
  store i8** %6, i8*** %3, align 8
  br label %7

7:                                                ; preds = %18, %1
  %8 = load i8**, i8*** %3, align 8
  %9 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %10 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %9, i32 0, i32 0
  %11 = load i8**, i8*** %10, align 8
  %12 = call i8** @buf_end(i8** %11)
  %13 = icmp ne i8** %8, %12
  br i1 %13, label %14, label %21

14:                                               ; preds = %7
  %15 = load i8**, i8*** %3, align 8
  %16 = load i8*, i8** %15, align 8
  %17 = call i32 @free(i8* %16)
  br label %18

18:                                               ; preds = %14
  %19 = load i8**, i8*** %3, align 8
  %20 = getelementptr inbounds i8*, i8** %19, i32 1
  store i8** %20, i8*** %3, align 8
  br label %7

21:                                               ; preds = %7
  %22 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %23 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %22, i32 0, i32 0
  %24 = load i8**, i8*** %23, align 8
  %25 = call i32 @buf_free(i8** %24)
  ret void
}

declare dso_local i8** @buf_end(i8**) #1

declare dso_local i32 @free(i8*) #1

declare dso_local i32 @buf_free(i8**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
